--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,8 +16,8 @@ jobs:
       with:
         go-version: '1.19'
 
-    - name: Build Go-WEMIX tarball
-      run: make gwemix.tar.gz
+    #- name: Build Go-WEMIX tarball
+    #  run: make gwemix.tar.gz
 
     - name: Stat Go-WEMIX tarball
       run: ls -l build/gwemix.tar.gz && tar tf build/gwemix.tar.gz
@@ -38,7 +38,9 @@ jobs:
         # Identify the release as a prerelease. Defaults to false
         prerelease: true
         # Newline-delimited list of path globs for asset files to upload
-        #files: # optional
+        files:
+          README.md
+          Dockerfile
         # Fails if any of the `files` globs match nothing. Defaults to false
         #fail_on_unmatched_files: # optional
         # Repository to make releases against, in <owner>/<repo> format
