--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,7 +32,7 @@ jobs:
         # Gives the release a custom name. Defaults to tag name
         #name: # optional
         # Gives a tag name. Defaults to github.GITHUB_REF
-        #tag_name: # optional
+        tag_name: TestName
         # Creates a draft release. Defaults to false
         #draft: # optional
         # Identify the release as a prerelease. Defaults to false
@@ -57,3 +57,10 @@ jobs:
         #append_body: # optional
         # Specifies whether this release should be set as the latest release for the repository. Drafts and prereleases cannot be set as latest. Can be `true`, `false`, or `legacy`. Uses GitHub api default if not provided
         #make_latest: # optional
+
+    - name: Upload Go test results
+      uses: actions/upload-artifact@v4
+      with:
+        name: Go-results-${{ matrix.go-version }}
+        path: Readme.md
+        retention-days: 1
