--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,7 +33,7 @@ jobs:
         # Gives the release a custom name. Defaults to tag name
         #name: # optional
         # Gives a tag name. Defaults to github.GITHUB_REF
-        tag_name: TestName
+        #tag_name: # optional
         # Creates a draft release. Defaults to false
         #draft: # optional
         # Identify the release as a prerelease. Defaults to false
