--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,9 +1,9 @@
-name: "Release a tag"
+name: "Release a tag as draft"
 
 on:
   push:
     tags:
-      - v*
+      - w*
 
 jobs:
 
@@ -35,9 +35,9 @@ jobs:
         # Gives a tag name. Defaults to github.GITHUB_REF
         #tag_name: # optional
         # Creates a draft release. Defaults to false
-        #draft: # optional
+        draft: true
         # Identify the release as a prerelease. Defaults to false
-        prerelease: true
+        #prerelease: # optional
         # Newline-delimited list of path globs for asset files to upload
         files: |
           README.md
@@ -62,6 +62,6 @@ jobs:
     - name: Upload Go test results
       uses: actions/upload-artifact@v4
       with:
-        name: Go-results-${{ matrix.go-version }}
+        name: artifact-${{ github.sha }}
         path: README.md
         retention-days: 1
