--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,10 +21,13 @@ jobs:
       run: USE_ROCKSDB=YES make gwemix.tar.gz
 
     - name: Stat Go-WEMIX tarball
-      run: ls -l build/gwemix.tar.gz && tar tf build/gwemix.tar.gz
+      run: |
+        ls -l build/gwemix.tar.gz
+        tar tf build/gwemix.tar.gz
 
-    - name: Rename tarball
-      run: mv build/gwemix.tar.gz gwemix-${{ github.ref_name }}-linux-rocksdb.tar.gz
+    - name: Move results to artifact
+      run: |
+        mv build/gwemix.tar.gz gwemix-${{ github.ref_name }}-linux-rocksdb.tar.gz
 
     - name: GH Release
       uses: softprops/action-gh-release@v2.0.5
