--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -1,7 +1,10 @@
-name: "Release a tag"
+name: "Update dev"
 
 on:
   push:
+    branches:
+      - dev
+  pull_request:
     branches:
       - dev
 
@@ -11,3 +14,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
+
+    - name: Print branch
+      run: |
+        echo "ref" ${{ github.ref }}
+        echo "ref_name" ${{ github.ref_name }}
+        echo "head_ref" ${{ github.head_ref }}
+        echo "base_ref" ${{ github.base_ref }}
