--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -1,12 +1,11 @@
-name: "Update dev"
+name: artifacts
 
 on:
   push:
     branches:
+      - devnet
       - dev
-  pull_request:
-    branches:
-      - dev
+      - master
 
 jobs:
 
@@ -21,3 +20,26 @@ jobs:
         echo "ref_name" ${{ github.ref_name }}
         echo "head_ref" ${{ github.head_ref }}
         echo "base_ref" ${{ github.base_ref }}
+
+    - name: Set up Go
+      uses: actions/setup-go@v4
+      with:
+        go-version: '1.19'
+
+    - name: Build Go-WEMIX tarball
+      run: USE_ROCKSDB=YES make gwemix.tar.gz
+
+    - name: Stat Go-WEMIX tarball
+      run: |
+        ls -l build/gwemix.tar.gz
+        tar tf build/gwemix.tar.gz
+
+    - name: Move results to artifact
+      run: mv build/gwemix.tar.gz gwemix-${{ github.event.pull_request.head.sha }}-linux-amd64-rocksdb.tar.gz
+
+    - name: Upload Go-WEMIX
+      uses: actions/upload-artifact@v4
+      with:
+        name: artifact-${{ github.ref_name }}-${{ github.sha }}
+        path: gwemix-${{ github.ref_name }}-linux-rocksdb.tar.gz
+        retention-days: 7
