--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -41,5 +41,5 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: artifact-${{ github.ref_name }}-${{ github.sha }}
-        path: gwemix-${{ github.ref_name }}-${{ github.sha }}-linux-rocksdb.tar.gz
+        path: gwemix-${{ github.ref_name }}-${{ github.sha }}-linux-amd64-rocksdb.tar.gz
         retention-days: 7
