--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -43,3 +43,6 @@ jobs:
         name: artifact-${{ github.ref_name }}-${{ github.sha }}
         path: gwemix-${{ github.ref_name }}-${{ github.sha }}-linux-amd64-rocksdb.tar.gz
         retention-days: 7
+
+    - name: Remove results
+      run: rm gwemix-${{ github.ref_name }}-${{ github.sha }}-linux-amd64-rocksdb.tar.gz
