--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,56 +17,27 @@ jobs:
       with:
         go-version: '1.19'
 
-    - name: Build Go-WEMIX tarball
+    - name: Install required packages
+      run: sudo apt-get install -y libsnappy-dev libjemalloc-dev
+
+    - name: Build Go-WEMIX tarball (rocksdb)
       run: USE_ROCKSDB=YES make gwemix.tar.gz
 
-    - name: Stat Go-WEMIX tarball
-      run: |
-        ls -l build/gwemix.tar.gz
-        tar tf build/gwemix.tar.gz
+    - name: Move results to artifact (rocksdb)
+      run: mv build/gwemix.tar.gz gwemix-${{ github.ref_name }}-linux-amd64-rocksdb.tar.gz
 
-    - name: Move results to artifact
-      run: |
-        mv build/gwemix.tar.gz gwemix-${{ github.ref_name }}-linux-rocksdb.tar.gz
+    - name: Build Go-WEMIX tarball (leveldb)
+      run: USE_ROCKSDB=NO make gwemix.tar.gz
+
+    - name: Move results to artifact (leveldb)
+      run: mv build/gwemix.tar.gz gwemix-${{ github.ref_name }}-linux-amd64-leveldb.tar.gz
 
     - name: GH Release
       uses: softprops/action-gh-release@v2.0.5
       with:
-        # Note-worthy description of changes in release
-        #body: # optional
-        # Path to load note-worthy description of changes in release from
-        #body_path: # optional
-        # Gives the release a custom name. Defaults to tag name
-        name: WEMIX3.0 Mainnet and Testnet Build (${{ github.sha }})
-        # Gives a tag name. Defaults to github.GITHUB_REF
-        #tag_name: # optional
-        # Creates a draft release. Defaults to false
+        name: WEMIX3.0 Mainnet and Testnet Build (${{ github.ref_name }})
         draft: true
-        # Identify the release as a prerelease. Defaults to false
-        #prerelease: # optional
-        # Newline-delimited list of path globs for asset files to upload
+        prerelease: true
         files: |
-          gwemix-${{ github.ref_name }}-linux-rocksdb.tar.gz
-        # Fails if any of the `files` globs match nothing. Defaults to false
-        #fail_on_unmatched_files: # optional
-        # Repository to make releases against, in <owner>/<repo> format
-        #repository: # optional
-        # Authorized secret GitHub Personal Access Token. Defaults to github.token
-        #token: # optional, default is ${{ github.token }}
-        # Commitish value that determines where the Git tag is created from. Can be any branch or commit SHA.
-        #target_commitish: # optional
-        # If specified, a discussion of the specified category is created and linked to the release. The value must be a category that already exists in the repository. If there is already a discussion linked to the release, this parameter is ignored.
-        #discussion_category_name: # optional
-        # Whether to automatically generate the name and body for this release. If name is specified, the specified name will be used; otherwise, a name will be automatically generated. If body is specified, the body will be pre-pended to the automatically generated notes.
-        #generate_release_notes: # optional
-        # Append to existing body instead of overwriting it. Default is false.
-        #append_body: # optional
-        # Specifies whether this release should be set as the latest release for the repository. Drafts and prereleases cannot be set as latest. Can be `true`, `false`, or `legacy`. Uses GitHub api default if not provided
-        #make_latest: # optional
-
-    - name: Upload Go test results
-      uses: actions/upload-artifact@v4
-      with:
-        name: artifact-${{ github.sha }}
-        path: gwemix-${{ github.ref_name }}-linux-rocksdb.tar.gz
-        retention-days: 1
+          gwemix-${{ github.ref_name }}-linux-amd64-rocksdb.tar.gz
+          gwemix-${{ github.ref_name }}-linux-amd64-leveldb.tar.gz
