--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,11 +23,17 @@ jobs:
     - name: Build Go-WEMIX tarball (rocksdb)
       run: USE_ROCKSDB=YES make gwemix.tar.gz
 
+    - name: Display ELF info (rocksdb)
+      run: readelf -dV build/bin/gwemix
+
     - name: Move results to artifact (rocksdb)
       run: mv build/gwemix.tar.gz gwemix-${{ github.ref_name }}-linux-amd64-rocksdb.tar.gz
 
     - name: Build Go-WEMIX tarball (leveldb)
       run: USE_ROCKSDB=NO make gwemix.tar.gz
+
+    - name: Display ELF info (leveldb)
+      run: readelf -dV build/bin/gwemix
 
     - name: Move results to artifact (leveldb)
       run: mv build/gwemix.tar.gz gwemix-${{ github.ref_name }}-linux-amd64-leveldb.tar.gz
@@ -37,7 +43,6 @@ jobs:
       with:
         name: WEMIX3.0 Mainnet and Testnet Build (${{ github.ref_name }})
         draft: true
-        prerelease: true
         files: |
           gwemix-${{ github.ref_name }}-linux-amd64-rocksdb.tar.gz
           gwemix-${{ github.ref_name }}-linux-amd64-leveldb.tar.gz
