--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,7 +19,7 @@ jobs:
 
     - name: Setup packages
       run: |
-        sudo apt install -y libjemalloc-dev liblz4-dev libsnappy-dev libzstd-dev
+        sudo apt install -y libjemalloc-dev liblz4-dev libsnappy-dev libzstd-dev libudev-dev net-tools
         sudo apt remove -y bzip2 zlib1g-dev
 
     - name: Build Go-WEMIX tarball (rocksdb)
