--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,7 +20,7 @@ jobs:
     - name: Setup packages
       run: |
         sudo apt install -y libjemalloc-dev liblz4-dev libsnappy-dev libzstd-dev libudev-dev net-tools
-        sudo apt remove -y bzip2 zlib1g-dev
+        sudo apt remove -y bzip2 libbz2-dev zlib1g-dev
 
     - name: Build Go-WEMIX tarball (rocksdb)
       run: USE_ROCKSDB=YES make gwemix.tar.gz
