--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,11 +25,18 @@ jobs:
     - name: Build Go-WEMIX tarball (rocksdb)
       run: USE_ROCKSDB=YES make gwemix.tar.gz
 
+    - name: Set version
+      run: |
+        echo "GWEMIX_VERSION_META=$(build/bin/gwemix version | awk '/^Version/{ print $2 }')" >> "$GITHUB_ENV"
+        echo "GWEMIX_VERSION=$(echo $GWEMIX_VERSION_META | cut -d'-' -f1)" >> "$GITHUB_ENV"
+        echo "GWEMIX_META=$(echo $GWEMIX_VERSION_META | cut -d'-' -f2-)" >> "$GITHUB_ENV"
+        echo "GWEMIX_COMMITHASH=$(echo ${{ github.sha }} | cut -c1-8)" >> "$GITHUB_ENV"
+
     - name: Display ELF info (rocksdb)
       run: readelf -dV build/bin/gwemix
 
     - name: Move results to artifact (rocksdb)
-      run: mv build/gwemix.tar.gz gwemix-${{ github.ref_name }}-linux-amd64-rocksdb.tar.gz
+      run: mv build/gwemix.tar.gz gwemix-${{ env.GWEMIX_VERSION_META }}-${{ env.GWEMIX_COMMITHASH }}-linux-amd64-rocksdb.tar.gz
 
     - name: Build Go-WEMIX tarball (leveldb)
       run: USE_ROCKSDB=NO make gwemix.tar.gz
@@ -38,13 +45,13 @@ jobs:
       run: readelf -dV build/bin/gwemix
 
     - name: Move results to artifact (leveldb)
-      run: mv build/gwemix.tar.gz gwemix-${{ github.ref_name }}-linux-amd64-leveldb.tar.gz
+      run: mv build/gwemix.tar.gz gwemix-${{ env.GWEMIX_VERSION_META }}-${{ env.GWEMIX_COMMITHASH }}-linux-amd64-leveldb.tar.gz
 
     - name: GH Release
       uses: softprops/action-gh-release@v2.0.5
       with:
-        name: WEMIX3.0 Mainnet and Testnet Build (${{ github.ref_name }})
+        name: WEMIX3.0 Mainnet and Testnet Build (${{ env.GWEMIX_VERSION }})
         draft: true
         files: |
-          gwemix-${{ github.ref_name }}-linux-amd64-rocksdb.tar.gz
-          gwemix-${{ github.ref_name }}-linux-amd64-leveldb.tar.gz
+          gwemix-${{ env.GWEMIX_VERSION_META }}-${{ env.GWEMIX_COMMITHASH }}-linux-amd64-rocksdb.tar.gz
+          gwemix-${{ env.GWEMIX_VERSION_META }}-${{ env.GWEMIX_COMMITHASH }}-linux-amd64-leveldb.tar.gz
