--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,7 +27,8 @@ jobs:
 
     - name: Set version
       run: |
-        echo "GWEMIX_VERSION_META=$(build/bin/gwemix version | awk '/^Version/{ print $2 }')" >> "$GITHUB_ENV"
+        GWEMIX_VERSION_META=$(build/bin/gwemix version | awk '/^Version/{ print $2 }')
+        echo "GWEMIX_VERSION_META=$GWEMIX_VERSION_META" >> "$GITHUB_ENV"
         echo "GWEMIX_VERSION=$(echo $GWEMIX_VERSION_META | cut -d'-' -f1)" >> "$GITHUB_ENV"
         echo "GWEMIX_META=$(echo $GWEMIX_VERSION_META | cut -d'-' -f2-)" >> "$GITHUB_ENV"
         echo "GWEMIX_COMMITHASH=$(echo ${{ github.sha }} | cut -c1-8)" >> "$GITHUB_ENV"
